k8s/test-airflow.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test-airflow
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: airflow
    spec:
      containers:
      - name: airflow-di-extern
        image: us.gcr.io/liquid-champion-135823/airflow-di-extern:1.6.1-100-ga79a915
        ports:
        - containerPort: 443
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy",
                  "-instances=liquid-champion-135823:us-central1:us-gce-poc-db-airflow01=tcp:3306",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true

      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: cloudsql
          emptyDir:
        - name: secrets
          secret:
            secretName: sidecar-ssl
